# homework

./: README.md  diff_main_test1
HW1/: diff_main_test1  diff_test1_test2
HW2/: CMakeLists.txt  hello_world.cpp  move_me_out.cpp
